@@ -1,3 +1,9 @@
+Tue Sep 24 13:03:52 2002  Nick Burrett  <nick@dsvr.net>
+
+	* sys/exec.c (execve): Make 3rd param char *const *.
+	* sys/execv.c (execv): Make 2nd param char *const *.
+	* unistd.h (execv, execve): Fix prototypes accordingly.
+
 Tue Sep 24 13:00:22 2002  Nick Burrett  <nick@dsvr.net>
 
 	* unix/proc.c (setegid): Set errno to EPERM on failure.
